Ошибаемся специально #5.txt
Ошибаемся специально #5
В прошлом уроке вы написали свою первую программу.

Сначала вы написали слово print, потом открывающую скобку, потом кавычку. Затем вы написали само приветствие, потом поставили еще одну кавычку и поставили закрывающую скобку. Вы следовали правилам языка, и программа заработала.

Попробуйте намеренно сделать ошибку в программе. Например, удалите одну из кавычек или скобок.

Запустите программу кнопкой и посмотрите, что напишет интерпретатор Питона в результаты работы программы.

Например, если удалить закрывающую скобку, Питон напишет

Traceback (most recent call last):
  File hello.py, line 1
    print('Привет, мир!'
         ^
SyntaxError: unexpected EOF while parsing (hello.py, line 1)
Так Питон подсказывает, где именно и какая ошибка произошла: line 1 — указание на первую строку программы, а текст «SyntaxError: unexpected EOF while parsing» — указывает, что произошла ошибка синтаксиса и разбор текста программы невозможен из‑за того, что файл закончился, а закрывающая скобка так и не была закрыта.

После сообщения самого Питона будет подсказка на русском языке от нашего специального робота-помощника. Это поможет быстрее сориентироваться и исправить ошибку.

Не пугайтесь и не переживайте, когда будете допускать ошибки — это вполне нормально. Нет ничего страшного в том, чтобы написать программу не с первого, а со второго или даже с десятого раза.

Для того, чтобы пройти этот урок, оставьте в программе хотя бы одну ошибку и нажмите кнопку проверки.